Add some temp a2a changes.